# DRACO

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: fortran_build.yml
app/: CMakeLists.txt  main.f90  meson.build
config/: CMakeLists.txt  install-mod.py  meson.build
config/modules/: Findmctc-lib.cmake  Findnumsa.cmake  Findtblite.cmake  Findtest-drive.cmake
src/: CMakeLists.txt  draco.f90  meson.build
src/draco/: CMakeLists.txt  calc.f90  charges.f90  data.f90  fancy.f90  interface.f90  meson.build  read.f90  type.f90  write.f90
subprojects/: tblite.wrap
test/: CMakeLists.txt  main.f90  meson.build  test_scale.f90
