option(
  'lapack',
  type: 'combo',
  value: 'auto',
  yield: true,
  choices: ['auto', 'mkl', 'mkl-rt', 'openblas', 'netlib'],
  description : 'linear algebra backend',
)

option(
  'openmp',
  type: 'boolean',
  value: true,
  yield: true,
  description: 'use OpenMP parallelisation',
)

option(
  'tblite',
  type: 'feature',
  value: 'auto',
  yield: true,
  description: 'use tblite library as backend for xTB',
)
option(
  'build_name',
  type: 'string',
  value: 'unknown',
  description: 'Name of the build, will be overwritten automatically by git',
)
